Funcionalidad de enrutamiento dinamico listo, se gestiona todo desde el params en servers

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,7 +2,9 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/components/*": ["./src/components/*"],
+      "@/layouts/*": ["./src/layouts/*"],
+      "@/containers/*": ["./src/containers/*"],
     }
   }
 }
