--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.5",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@next/font": "13.1.2",
+    "@tailwindcss/forms": "^0.5.3",
+    "dotenv": "^16.0.3",
+    "graphql": "^16.6.0",
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "tailwind-scrollbar": "^2.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
